<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.restart.earthquake.ScrollingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/map"
                  android:name="com.google.android.gms.maps.MapFragment"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="0.25"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/quakesRecyclerList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/httpWait"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"/>
</RelativeLayout>